--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-
-fastapi==0.104.1
-pydantic==2.5.2
 pydantic_core==2.14.5
-uvicorn==0.29.0
 pymongo
-motor
 requests
+fastapi>=0.115
+uvicorn[standard]>=0.30
+motor>=3.5
+pydantic>=2.5
+pydantic-settings>=2.2
+passlib[bcrypt]>=1.7
+PyJWT>=2.8
