--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.115.*
-motor==3.5.*         # incluye pymongo
+motor==3.5.*        
 dnspython==2.*
 pydantic==2.8.*
 pydantic-settings==2.3.*
