--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-  "functions": {
-    "api/index.py": {
-      "runtime": "python3.11"
+  "version": 2,
+  "builds": [
+    {
+      "src": "code/main.py",
+      "use": "@vercel/python"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
